app/manifest-files/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: kolaalekhya/todo-app:v1
        ports:
        - containerPort: 3000   
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
